# estiMINT-python

./: .coverage  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
datasets/: README.md  estimint_simulations_y9.parquet
models/: consolidate.py
models/hbr/: README.md  prepare.py  train_eir_to_hbr.py  train_hbr_to_eir.py
models/hbr/metrics/: eir_OOF_metrics_K10CV.csv  eir_test_metrics.csv  hbr_OOF_metrics_K10CV.csv  hbr_test_metrics.csv
models/prevalence/: README.md  prepare.py  train.py
models/prevalence/metrics/: eir_OOF_metrics_K10CV.csv  eir_test_metrics.csv
scripts/: prepare_eir_to_hbr_data.py  prepare_hbr_data.py  prepare_mint_data.py  release.sh  train_eir_to_hbr.py  train_on_hbr_data.py  train_on_mint_data.py
src/estimint/: __init__.py  bednet.py  data_processing.py  hbr.py  models.py  plotting.py  run.py  scenarios.py  storage.py  train.py  types.py  utils.py
tests/: smoke_test.py  test_bednet.py  test_flows.py  test_scenarios.py
