[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estimint"
version = "1.4.0"
description = "EIR Estimation using Machine learning INTerventions - Python port"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Cosmo Santoni", email = "cosmo.santoni@imperial.ac.uk"},
]
keywords = [
    "malaria",
    "EIR",
    "machine-learning",
    "xgboost",
    "epidemiology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Core runtime dependencies: everything needed to load a bundled model and run
# inference (load_xgb_model / run_xgb_model / run_scenarios / calculate_dn0).
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xgboost>=1.6.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Data preparation + model training (not needed for inference):
#   duckdb     -> load_and_filter() SQL over the simulation parquet
#   scikit-learn -> strata_and_split() K-means stratification
#   pyarrow    -> parquet engine for pd.read_parquet in models/*/train.py
train = [
    "duckdb>=0.8.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=10.0.0",
]
# Plotting (plot_obs_pred and training diagnostic plots):
viz = [
    "matplotlib>=3.4.0",
]
# Optional model download from GitHub releases (graceful fallback if absent):
download = [
    "requests>=2.28.0",
    "appdirs>=1.4.0",
]
# run_scenarios pipeline: the stateMINT mamba2 emulator (PyPI distribution: mintstate,
# imported as stateMINT). Needs Python >=3.12. Pinned to the mamba2-train branch via
# [tool.uv.sources] for now.
scenarios = [
    "mintstate; python_version >= '3.12'",
]
# Everything a model developer needs (train + plot + download):
all = [
    "duckdb>=0.8.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=10.0.0",
    "matplotlib>=3.4.0",
    "requests>=2.28.0",
    "appdirs>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/CosmoNaught/estiMINT"
Documentation = "https://github.com/CosmoNaught/estiMINT#readme"
Repository = "https://github.com/CosmoNaught/estiMINT"
Issues = "https://github.com/CosmoNaught/estiMINT/issues"

[tool.uv.sources]
# Dev-only override: pull mintstate from the mamba2-train branch. This is stripped from
# the published package metadata, so it does not block PyPI uploads.
mintstate = { git = "https://github.com/mrc-ide/stateMINT.git", branch = "mamba2-train" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
estimint = [
    "*.txt", 
    "*.csv", 
    "*.pkl",
    "*.json",
    "data/*",
    "data/**/*",
    "inst/*",
    "inst/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=estimint --cov-report=term-missing"
