[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estimint"
version = "1.4.2"
description = "EIR Estimation using Machine learning interventions "
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Cosmo Santoni", email = "cosmo.santoni@imperial.ac.uk"},
    {name = "Anmol Thapar", email = "a.thapar@imperial.ac.uk"}
]
keywords = [
    "malaria",
    "EIR",
    "machine-learning",
    "xgboost",
    "epidemiology",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xgboost>=1.6.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
train = [
    "duckdb>=0.8.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=10.0.0",
]
viz = [
    "matplotlib>=3.4.0",
]
download = [
    "requests>=2.28.0",
    "appdirs>=1.4.0",
]
scenarios = [
    "mintstate>=0.3.0"
]
all = ["estimint[train,viz,download,scenarios]"]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/CosmoNaught/estiMINT"
Documentation = "https://github.com/CosmoNaught/estiMINT#readme"
Repository = "https://github.com/CosmoNaught/estiMINT"
Issues = "https://github.com/CosmoNaught/estiMINT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
estimint = [
    "*.txt",
    "*.csv",
    "*.pkl",
    "*.json",
    "data/*",
    "data/**/*",
    "inst/*",
    "inst/**/*",
]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=estimint --cov-report=term-missing"
